# communal-calculator

./: .clang-tidy  .gitignore  CMakeLists.txt  cpplint.cfg
AppleM1Build/: communal-calculator
Resources/icons/: icons.qrc
Resources/qml/: CalculateSummaryControl.qml  CalculateView.qml  CounterCell.qml  CustomButton.qml  DigitsTextInput.qml  SettingCell.qml  SettingsPanel.qml  SettingsView.qml  TariffSettingsPanel.qml  TopBar.qml  main.qml  qml.qrc
SourceFiles/: communal_calculator.cpp  communal_calculator.h  main.cpp
SourceFiles/core/: communal_calculator.cpp  communal_calculator.h
SourceFiles/model/core/: app_cfg_manager.cpp  app_cfg_manager.h  app_configuration.cpp  app_configuration.h  calculator.cpp  calculator.h  communal_counter.cpp  communal_counter.h  model.cpp  model.h  observer.h  workspace.cpp  workspace.h
SourceFiles/model/wrappers/: cstd_wrapper.cpp  cstd_wrapper.h  std_of_stream_wrapper.cpp  std_of_stream_wrapper.h
SourceFiles/model_view/: model_view.cpp  model_view.h
SourceFiles/ui/: main_window.cpp  main_window.h  mainwindow.ui  window.cpp  window.h
SourceFiles/view/: guid_application.cpp  guid_application.h
Tests/: CMakeLists.txt
Tests/SourceFiles/: main.cpp
Tests/SourceFiles/core/: app_cfg_manager_test.cpp  app_cfg_manager_test.h  app_configuration_test.h  calculator_test.cpp  calculator_test.h  communal_counter_test.cpp  communal_counter_test.h  model_test.cpp  model_test.h  observer_test.cpp  observer_test.h  workspace_test.cpp  workspace_test.h
Tests/SourceFiles/wrappers/: cstd_wrapper_test.h  std_of_stream_wrapper_test.h
examples/: december.communal
